--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "single-page-markdown-website 'home.md' --open --watch"
+    "dev": "single-page-markdown-website 'home.md' --output docs --open --watch"
   },
   "author": "",
   "license": "ISC",
