파비콘 추가

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "description": "Temporary homepage",
     "toc": true,
     "sections": true,
-    "version": null
+    "version": null,
+    "faviconImage": "image/favicon.svg"
   },
   "dependencies": {
     "single-page-markdown-website": "^0.0.25"
