favicon 경로 오류 수정 위해 base url 수정

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "single-page-markdown-website": {
-    "baseUrl": "https://ezllabs.github.io/ezlabs",
+    "baseUrl": "https://ezllabs.co.kr",
     "title": "Ezl Labs Inc.",
     "description": "Temporary homepage",
     "toc": true,
